--- a/index.html
+++ b/index.html
@@ -55,18 +55,7 @@ a:hover, a:active {
 
 </style>
 <body>
-<center><h1> WELCOME </h1>
-        <img src="https://media.giphy.com/media/MQEmcf3FbZeww/giphy.gif"style="width:700x;height:500px;border:0px;">
-        <h1>GOOD MORNING</h1></center>
-
-<p class ="one">
- <center>
-  <form action="action1.php" method="POST">
-   <b>Enter Your Contact Number:<br>
-    <input type="text" name="mypass"><br><br>
-    <input class="submit" type="submit" value="SUBMIT">
-  </form>
-<h2>Note : Enter only first 10 digit.</h2><h2>It's just an Proof that You are the same Person I am expect .<h2>
+<h3>Hello guys this is me Hiten(Hitesh) Jangid , My page will be updated soon</h3>
 
 </body>
 </html>
