--- a/index.html
+++ b/index.html
@@ -1,61 +1,57 @@
-<!Doctype html>
-<html>
-<head>
-<title>Welcome to Official Hiten jangid</title>
-</head>
+
+<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 <style>
- body{ background-image: url(http://www.brandvid.com/assets/BrandVid-home-1920-945.jpg);
-      color: green;
-      font-style: bold;
-      font-size:50px
-      }
-  h1{font-size:150px;
-     height:300px;
-    color:  white;
-    text-align: center;
-    }
- h2{
-    font-size:20px;
-    color:  white;
-    text-align: center;
- }
-input{ height: 70px;
-       width: 700px;
-       }
-p.one{
-     border:2px solid green;
-outline-style: medium;
-outline-style: thin;}
-input.submit{ background-color: green ;
-              height:70px;
-              width:700px;
-              border:2px;
-              border-radius:25px;
-              color: white;
-              font-size:30px;
-}
-a:link, a:visited {
-    background-color: green;
-    color: white;
-    padding: 0px 50px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-     border:2px;
-     border-radius:35px;
-   width:700px;
-   
-}
 
-a:hover, a:active { 
-                    
-    background-color: green;
-}
+  h2 {
+    font-family: Lobster, Monospace;
+  }
 
+  .thick-green-border {
+    border-color: green;
+    border-width: 10px;
+    border-style: solid;
+    border-radius: 50%;
+  }
 
 </style>
-<body>
-<h3>Hello guys this is me Hiten(Hitesh) Jangid , My page will be updated soon</h3>
 
-</body>
-</html>
+<div class="container-fluid">
+  <h2 class="text-primary text-center">CatPhotoApp</h2>
+
+  <a href="#"><img class="img-responsive thick-green-border" src="https://bit.ly/fcc-relaxing-cat" alt="A cute orange cat lying on its back. "></a>
+
+  <img src="https://bit.ly/fcc-running-cats" class="img-responsive" alt="Three kittens running towards the camera. ">
+  <div class="row">
+    <div class="col-xs-4">
+      <button class="btn btn-block btn-primary">Like</button>
+    </div>
+    <div class="col-xs-4">
+      <button class="btn btn-block btn-info">Info</button>
+    </div>
+    <div class="col-xs-4">
+      <button class="btn btn-block btn-danger">Delete</button>
+    </div>
+  </div>
+  <p>Things cats love:</p>
+  <ul>
+    <li>cat nip</li>
+    <li>laser pointers</li>
+    <li>lasagna</li>
+  </ul>
+  <p>Top 3 things cats hate:</p>
+  <ol>
+    <li>flea treatment</li>
+    <li>thunder</li>
+    <li>other cats</li>
+  </ol>
+  <form action="/submit-cat-photo">
+    <label><input type="radio" name="indoor-outdoor"> Indoor</label>
+    <label><input type="radio" name="indoor-outdoor"> Outdoor</label>
+    <label><input type="checkbox" name="personality"> Loving</label>
+    <label><input type="checkbox" name="personality"> Lazy</label>
+    <label><input type="checkbox" name="personality"> Crazy</label>
+    <input type="text" placeholder="cat photo URL" required>
+    <button type="submit">Submit</button>
+  </form>
+</div>
