--- a/index.html
+++ b/index.html
@@ -7,38 +7,38 @@
 </head>
 <style>
 img{
-  width: 100px;
-  height: 300px;
+  width: 50px;
+  height: 150px;
   border-radius: 10%;
 
 }
 img.two{
-  width: 330px;
-  height: 100px;
+  width: 150px;
+  height: 50px;
 position: relative;
 border-radius: 10%;
 }
 img.two:hover{
-  width: 350px;
-  height: 120px;
+  width: 170px;
+  height: 65px;
   border-radius: 10%;
 
 }
 img.three{
-  width: 100px;
-  height: 100px;
+  width: 50px;
+  height: 50px;
 position: relative;
 border-radius: 10%;
 }
 img.three:hover{
-  width: 120px;
-  height: 120px;
+  width: 65px;
+  height: 65px;
   border-radius: 10%;
 
 }
 img:hover{
-  width: 120px;
-  height: 350px;
+  width: 65px;
+  height: 170px;
   border-radius: 10%;
   }
 </style>
@@ -46,43 +46,43 @@ img:hover{
   <center>
   <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+
   <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
 
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  &nbsp&nbsp&nbsp&nbsp&nbsp
+
+
   <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
 <br>
-<br>
-  &nbsp&nbsp&nbsp&nbsp<img class="two" src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
+
+&nbsp&nbsp&nbsp&nbsp&nbsp<img class="two" src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-    &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+
   <img class="three" src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
 
   <br>
-  <br>
+
 
 
   <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+
   <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+
 
     <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
-    &nbsp&nbsp&nbsp
+    &nbsp
       <img class="three" src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
-      &nbsp&nbsp&nbsp
+      &nbsp
 
 
   <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
 </center>
 </body>
 </html>
+
