--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ img:hover{
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 
   <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 
 
     <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
