--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ img:hover{
 
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  &nbsp&nbsp&nbsp&nbsp&nbsp
+  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 
 
   <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
@@ -60,7 +60,7 @@ img:hover{
 &nbsp&nbsp&nbsp&nbsp&nbsp<img class="two" src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 
   <img class="three" src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
 
