--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@ img:hover{
   height: 170px;
   border-radius: 10%;
   }
+  p.one{
+     border:2px solid green;
+outline-style: medium;
+outline-style: thin;}
 </style>
 <body>
   <center>
@@ -82,6 +86,10 @@ img:hover{
 
 
   <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
+    <br>
+    <br>
+    <p class="one">
+      <h3>webpage is under progress, thank you</h3>
 </center>
 </body>
 </html>
