--- a/index.html
+++ b/index.html
@@ -2,69 +2,66 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hiten Jangid</title>
+  <title>my try</title>
 
 </head>
 <style>
 img{
   width: 50px;
   height: 150px;
-  border-radius: 10%;
+
 
 }
 img.two{
-  width: 150px;
+  width: 194px;
   height: 50px;
 position: relative;
-border-radius: 10%;
+
 }
 img.two:hover{
-  width: 170px;
+  width: 220px;
   height: 65px;
-  border-radius: 10%;
+
 
 }
 img.three{
   width: 50px;
   height: 50px;
 position: relative;
-border-radius: 10%;
+
 }
 img.three:hover{
   width: 65px;
   height: 65px;
-  border-radius: 10%;
+
 
 }
 img:hover{
   width: 65px;
   height: 170px;
-  border-radius: 10%;
+
   }
-  p.one{
-     border:2px solid green;
-outline-style: medium;
-outline-style: thin;}
+  
 </style>
 <body>
   <center>
-  <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
+<img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 
   <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
 
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  &nbsp&nbsp&nbsp
 
 
   <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
 <br>
 
-&nbsp&nbsp&nbsp&nbsp&nbsp<img class="two" src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
+<img class="two" src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  &nbsp&nbsp&nbsp
 
   <img class="three" src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
 
@@ -76,21 +73,16 @@ outline-style: thin;}
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 
   <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
-  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+  &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 
 
     <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
-    &nbsp
+
       <img class="three" src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
-      &nbsp
+
 
 
   <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
-    <br>
-    <br>
-    <p class="one">
-      <h3>webpage is under progress, thank you</h3>
 </center>
 </body>
 </html>
-
