--- a/index.html
+++ b/index.html
@@ -45,44 +45,44 @@ img:hover{
 </style>
 <body>
   <center>
-<img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
+<img src="https://github.com/hiten2112/hiten2112.github.io/blob/master/hiten.jpg">
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 
-  <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
+  <img src="https://github.com/hiten2112/hiten2112.github.io/blob/master/hiten.jpg">
 
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
   &nbsp&nbsp&nbsp
 
 
-  <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
+  <img src="https://github.com/hiten2112/hiten2112.github.io/blob/master/hiten.jpg">
 <br>
 
-<img class="two" src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
+<img class="two" src="https://github.com/hiten2112/hiten2112.github.io/blob/master/hiten.jpg">
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
   &nbsp&nbsp&nbsp
 
-  <img class="three" src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
+  <img class="three" src="https://github.com/hiten2112/hiten2112.github.io/blob/master/hiten.jpg">
 
   <br>
 
 
 
-  <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
+  <img src="https://github.com/hiten2112/hiten2112.github.io/blob/master/hiten.jpg">
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 
-  <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
+  <img src="https://github.com/hiten2112/hiten2112.github.io/blob/master/hiten.jpg">
   &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 
 
-    <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
+    <img src="https://github.com/hiten2112/hiten2112.github.io/blob/master/hiten.jpg">
 
-      <img class="three" src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
+      <img class="three" src="https://github.com/hiten2112/hiten2112.github.io/blob/master/hiten.jpg">
 
 
 
-  <img src="http://www.gettyimages.co.uk/gi-resources/images/Embed/new/embed2.jpg">
+  <img src="https://github.com/hiten2112/hiten2112.github.io/blob/master/hiten.jpg">
 </center>
 </body>
 </html>
