--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>my try</title>
+  <title>Hiten Jangid</title>
 
 </head>
 <style>
@@ -84,5 +84,8 @@ img:hover{
 
   <img src="https://github.com/hiten2112/hiten2112.github.io/blob/master/hiten.jpg">
 </center>
+  <hr>
+  <center>
+    <h2> Information will be update soon..<br>Thnak you..</h2>
 </body>
 </html>
